Corrects button rendering on tablet and phones

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -210,12 +210,6 @@ footer {
   header a small {
     display:inline;
   }
-  
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
 }
 
 @media print, screen and (max-width: 720px) {
@@ -239,10 +233,6 @@ footer {
 @media print, screen and (max-width: 480px) {
   body {
     padding:15px;
-  }
-  
-  header ul {
-    display:none;
   }
 }
 
